# solver_benchmark_binary

./: .gitignore  .info  LICENSE.md  NOTES.md  README.md  Snakefile  TODO.md  analysis_environment.yml  analyze_profiles.ipynb  environment_27.yml  environment_3x.yml  pyproject.toml  setup.py
codes/: .info
codes/config/: compare_1st_config.json  macos_config.json  serial_config.json
codes/notebooks/: analyze_profiles.ipynb  binary_phase_field.ipynb  diffusion.ipynb  nucleation.ipynb
codes/scripts/: binary_phase_field.py  diffusion.py  dispatch.sh  gpu_config.json  nucleation.ipynb  nucleation.py  params.py  setup.sh  solvers.py
config/: config.yml  permutations.csv  permutations.json
data/: .info
environments/: benchmark_analysis.yml
images/: myrulegraph.dot
profiles/mr-french/: config.yaml
results/: .info
results/diffusion/: .info  README.md
results/nucleation/: .info  README.md
results/old/: .info
src/fipy_solver_benchmarking/: project_paths.py
workflow/: .info  Snakefile
workflow/envs/: benchmark_petsc.yml  benchmark_pysparse.yml  benchmark_scipy.yml  benchmark_trilinos.yml  snakemake.yml
workflow/notebooks/: binary_derivation.py.ipynb  binary_phase_field.py.ipynb
workflow/rules/: aggregate.smk  clone.smk  common.smk  data.smk  logs.smk  permutations.smk  plot_scaling.smk  plot_solutions.smk  solve.smk
workflow/scripts/: benchmark_permutations.py  clone_repo.sh  collect_elapsed.py  extract_times.py  extract_total_times.py  get_solvers_preconditioners.py  list_preconditioners.py  list_solvers.py  make_conda_env.sh  make_config.py  (+4 more)
(+12 files in other folders)
